# Bake26D

./: .gitignore  .gitmodules  Bake26.py  Bake26D_Test1.blend  Bake26D_Test1.blend1  CMakeLists.txt  README.md  _library.blend  _library.blend1  build.sh  cut_code.py  install.sh  install_deps.sh  main.blend1  monk.blend  monk.blend1  testapp.csproj  testapp.sln
assets/: Bake26DLibrary.blend1
data/: config.cfg
data/blend/: monk.blend
data/shader/: b26obj.fs.glsl  b26obj.gs.glsl  b26obj.vs.glsl  draw_quads.fs.glsl  draw_quads.vs  draw_quads.vs.glsl  globals.glsl
data/test/: B2MT.json
data/tex/: marin.jpg~
src/: Bake26.py  BinaryFile.cpp  BinaryFile.h  BlenderTools.py  CMakeLists.txt  DebugHelper.cpp  DebugHelper.h  GlobalDefines.h  Main.cpp  Overlay.cpp  Overlay.h  StringExtensions.cpp  StringUtil.cpp  StringUtil.h  TestApp.cs  cut_code.py  cut_code.txt  gpu_structs.h  testapp  testapp.cpp  testapp.h  testapp.py  testapp_defines.h
